--- a/.env.sample
+++ b/.env.sample
@@ -4,5 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=YOUR_DATABASE_URL
+DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE?connection_limit=1"
+# DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public&connection_limit=1"
 JWT_SECRET="YOUR_SECRET_KEY"
