--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "school-sign",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fmt": "npx prettier -w ."
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.15",
@@ -17,7 +21,7 @@
     "@headlessui/react": "^2.1.7",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.19.1",
+    "@prisma/client": "^6.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -36,11 +40,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "cookie": "^0.6.0",
+    "cookie": "^1.0.2",
     "date-fns": "^3.6.0",
     "jose": "^5.8.0",
-    "js-cookie": "^3.0.5",
-    "next": "14.2.7",
+    "next": "^14.2.23",
     "pdf-lib": "^1.3.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -54,14 +57,13 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cookie": "^0.6.0",
-    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
-    "prisma": "^5.19.1",
+    "prisma": "^6.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
